aprofundamento no estudo de HATEOAS e criação de endpoint de Permissoes